Startet adding individual image

--- a/resources/views/webtrees-pedigree-chart.phtml
+++ b/resources/views/webtrees-pedigree-chart.phtml
@@ -76,7 +76,7 @@ use MagicSunday\Webtrees\PedigreeChartModule;
 
 <?php View::push('javascript'); ?>
 
-<script type="text/javascript" src="modules_v3/webtrees-pedigree-chart/js/pedigree-chart.min.js"></script>
+<script type="text/javascript" src="modules_v3/webtrees-pedigree-chart/js/pedigree-chart.js"></script>
 <script type="text/javascript">
 
 function PedigreeChart(data)
