--- a/css/pedigree-chart.css
+++ b/css/pedigree-chart.css
@@ -1,40 +1,55 @@
 #page-pedigree #pedigree_chart {
-	position: relative;
+    position: relative;
 /*
-	font-family: Verdana,sans-serif;
+    font-family: Verdana,sans-serif;
 */
 }
 
 #page-pedigree svg {
-	display: block;
-	margin: auto;
-	cursor: grab;
-	cursor: -webkit-grab;
+    display: block;
+    margin: auto;
+    cursor: grab;
+    cursor: -webkit-grab;
 /*
-	-webkit-filter: drop-shadow(3px 1px 3px rgba(0, 0, 0, 0.4));
-	filter: drop-shadow(3px 1px 3px rgba(0, 0, 0, 0.4));
+    -webkit-filter: drop-shadow(3px 1px 3px rgba(0, 0, 0, 0.4));
+    filter: drop-shadow(3px 1px 3px rgba(0, 0, 0, 0.4));
 */
 }
 
 .person rect {
-	fill: #fff;
-	stroke: steelblue;
-	stroke-width: 1px;
+    stroke: #edf7f9;
+    stroke-width: 1.5px;
 }
+
+.person rect.female {
+    stroke: #ff2080;
+}
+
+.person rect.male {
+    stroke: #81a9cb;
+}
+
 .person {
-	font: 14px sans-serif;
+    font: 12px sans-serif;
+}
+
+.person rect.image {
+    stroke: rgb(225, 225, 225);
 }
 
 .link {
-	fill: none;
-	stroke: red;
-	stroke-width: 1.5px;
+    fill: none;
+    stroke: rgb(225, 225, 225);
+    stroke-width: 1.5px;
 }
 
-#page-pedigree svg rect {
-	fill: none;
-	stroke-width: 1.5px;
-	stroke: #636363;
+.person a.gallery img,
+.person a.gallery {
+    float: left;
+    height: 50px;
+    margin: 0 2px 0 0;
+    max-width: 80px;
+    width: auto;
 }
 
 #page-pedigree .rtl {
@@ -43,12 +58,12 @@
 }
 
 #page-pedigree svg:active {
-	cursor: grabbing;
-	cursor: -webkit-grabbing;
+    cursor: grabbing;
+    cursor: -webkit-grabbing;
 }
 
 #page-pedigree svg text {
-	font-weight: bold;
+    font-weight: bold;
 }
 
 /* Unset any style from our transition helper classes */
@@ -56,33 +71,33 @@
 #page-pedigree svg .remove,
 #page-pedigree svg .update,
 #page-pedigree svg .old {
-	all: unset;
+    all: unset;
 }
 
 #page-pedigree svg .person.available {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 #page-pedigree svg .person .arc path {
-	fill: rgb(240, 240, 240);
-	stroke: rgb(225, 225, 225);
-	stroke-width: 2px;
+    fill: rgb(240, 240, 240);
+    stroke: rgb(225, 225, 225);
+    stroke-width: 2px;
 }
 
 #page-pedigree svg .person.hover .arc path {
-	fill: rgb(250, 250, 250);
+    fill: rgb(250, 250, 250);
 }
 
 #page-pedigree svg .person.available .arc path {
-	fill: rgb(250, 250, 250);
+    fill: rgb(250, 250, 250);
 }
 
 #page-pedigree svg .person.available.hover .arc path {
-	fill: rgb(240, 240, 240);
+    fill: rgb(240, 240, 240);
 }
 
 #page-pedigree svg .label {
-	font-weight: normal;
+    font-weight: normal;
 }
 
 #page-pedigree svg .label .alternativeName {
@@ -100,36 +115,36 @@
 }
 
 #page-pedigree svg rect.background {
-	fill: none;
-	pointer-events: all;
+    fill: none;
+    pointer-events: all;
 }
 
 #page-pedigree div.overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	text-align: center;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font: 10px sans-serif;
-	background: rgba(0, 0, 0, 0.5);
-	pointer-events: none;
-	transition: opacity ease-in-out;
-	transition-duration: 0s;
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: 10px sans-serif;
+    background: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+    transition: opacity ease-in-out;
+    transition-duration: 0s;
 }
 
 #page-pedigree div.overlay .tooltip {
-	font-size: 22px;
-	color: white;
-	position: relative;
-	margin: 0;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
-	opacity: 1;
-	text-align: center;
+    font-size: 22px;
+    color: white;
+    position: relative;
+    margin: 0;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    opacity: 1;
+    text-align: center;
 }
