--- a/resources/views/webtrees-pedigree-chart.phtml
+++ b/resources/views/webtrees-pedigree-chart.phtml
@@ -60,7 +60,7 @@ use MagicSunday\Webtrees\PedigreeChartModule;
                 <div class="col-sm-9 wt-page-options-value">
                     <?=
                     Bootstrap4::checkbox(
-                        I18N::translate('Show empty boxes for missing individuals. Caution: May slow down you system'),
+                        I18N::translate('Show empty boxes for missing individuals. Caution: May slow down your system!'),
                         false,
                         [
                             'id'      => 'showEmptyBoxes',
