--- a/resources/views/webtrees-pedigree-chart.phtml
+++ b/resources/views/webtrees-pedigree-chart.phtml
@@ -16,7 +16,7 @@ use MagicSunday\Webtrees\PedigreeChartModule;
     <form class="wt-page-options wt-page-options-pedigree-chart d-print-none">
         <input type="hidden" name="route" value="module">
         <input type="hidden" name="module" value="webtrees-pedigree-chart">
-        <input type="hidden" name="ged" value="<?= e($tree->getName()) ?>">
+        <input type="hidden" name="ged" value="<?= e($tree->name()) ?>">
         <input type="hidden" name="action" value="PedigreeChart">
 
         <fieldset class="form-group">
