--- a/resources/views/webtrees-pedigree-chart.phtml
+++ b/resources/views/webtrees-pedigree-chart.phtml
@@ -15,9 +15,9 @@ use MagicSunday\Webtrees\PedigreeChartModule;
 
     <form class="wt-page-options wt-page-options-pedigree-chart d-print-none">
         <input type="hidden" name="route" value="module">
-        <input type="hidden" name="module" value="webtrees-pedigree-chart">
+        <input type="hidden" name="module" value="<?= e($moduleName) ?>">
         <input type="hidden" name="ged" value="<?= e($tree->name()) ?>">
-        <input type="hidden" name="action" value="PedigreeChart">
+        <input type="hidden" name="action" value="Chart">
 
         <fieldset class="form-group">
             <div class="row">
@@ -89,13 +89,13 @@ use MagicSunday\Webtrees\PedigreeChartModule;
 
 <?php View::push('styles') ?>
 
-<link rel="stylesheet" type="text/css" href="modules_v3/webtrees-pedigree-chart/css/pedigree-chart.css">
+<link rel="stylesheet" type="text/css" href="modules_v4/webtrees-pedigree-chart/css/pedigree-chart.css">
 
 <?php View::endpush(); ?>
 
 <?php View::push('javascript'); ?>
 
-<script type="text/javascript" src="modules_v3/webtrees-pedigree-chart/js/pedigree-chart.js"></script>
+<script type="text/javascript" src="modules_v4/webtrees-pedigree-chart/js/pedigree-chart.js"></script>
 <script type="text/javascript">
 
 function PedigreeChart(data)
