Some webtrees v2.0 adjustments

--- a/resources/css/pedigree-chart.css
+++ b/resources/css/pedigree-chart.css
@@ -10,8 +10,8 @@
     display: block;
     margin: auto;
     cursor: move;
-    cursor: -webkit-grab;
-    cursor: -moz-grab;
+    /*cursor: -webkit-grab;*/
+    /*cursor: -moz-grab;*/
     cursor: grab;
     /*-webkit-filter: drop-shadow(3px 1px 3px rgba(0, 0, 0, 0.4));*/
     /*filter: drop-shadow(3px 1px 3px rgba(0, 0, 0, 0.4));*/
@@ -64,7 +64,7 @@
 
 #page-pedigree svg:active {
     cursor: grabbing;
-    cursor: -webkit-grabbing;
+    /*cursor: -webkit-grabbing;*/
 }
 
 #page-pedigree svg text {
@@ -147,8 +147,8 @@
     position: relative;
     margin: 0;
     top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
+    /*-webkit-transform: translateY(-50%);*/
+    /*-ms-transform: translateY(-50%);*/
     transform: translateY(-50%);
     opacity: 1;
     text-align: center;
