Prevent usage of deprecated methods

--- a/resources/views/chart.phtml
+++ b/resources/views/chart.phtml
@@ -66,7 +66,7 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
 
         <div class="form-group row">
             <label class="col-form-label col-sm-3 wt-page-options-label">
-                <?= I18N::translate('Layout'); ?>
+                <?= I18N::translate('Layout') ?>
             </label>
             <div class="col-sm-9 wt-page-options-value">
                 <?=
