--- a/resources/views/chart.phtml
+++ b/resources/views/chart.phtml
@@ -81,9 +81,20 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
         </div>
 
         <div class="form-group row">
-            <div class="col-sm-12 wt-page-options-value btn-group-sm text-center">
-                <input class="btn btn-primary" type="submit" value="<?= I18N::translate('view') ?>">
-                <input class="btn btn-primary" type="reset" value="<?= I18N::translate('reset') ?>" id="resetButton">
+            <div class="col-sm-12 wt-page-options-value text-center">
+                <div class="btn-toolbar justify-content-between">
+                    <div class="btn-group btn-group-sm">
+                        <input class="btn btn-primary" type="submit" value="<?= I18N::translate('view') ?>">
+                    </div>
+
+                    <div class="justify-content-around">
+                        <div class="btn-group btn-group-sm mr-2">
+                            <button class="btn btn-secondary" type="button" id="centerButton">
+                                <?= I18N::translate('Re center') ?>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </form>
