--- a/resources/css/svg.css
+++ b/resources/css/svg.css
@@ -1,1 +1,20 @@
 /* SVG export styles */
+#webtrees-pedigree-chart-container svg {
+    /* Native font stack: see https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/ */
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+#webtrees-pedigree-chart-container svg text {
+    font-weight: bold;
+}
+
+#webtrees-pedigree-chart-container svg .name .preferred {
+    text-decoration: underline;
+}
+
+#webtrees-pedigree-chart-container svg .date {
+    fill: rgb(127, 127, 127);
+    font-weight: normal;
+    direction: ltr;
+    unicode-bidi: plaintext;
+}
