--- a/resources/views/chart.phtml
+++ b/resources/views/chart.phtml
@@ -93,6 +93,14 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
                                 <?= I18N::translate('Re center') ?>
                             </button>
                         </div>
+                        <div class="btn-group btn-group-sm">
+                            <button class="btn btn-secondary border-right" type="button" id="exportPNG">
+                                <?= I18N::translate('Export as PNG') ?>
+                            </button>
+                            <button class="btn btn-secondary border-left" type="button" id="exportSVG">
+                                <?= I18N::translate('Export as SVG') ?>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
