Fixed local storage name

--- a/resources/views/chart.phtml
+++ b/resources/views/chart.phtml
@@ -160,7 +160,7 @@ function drawChart(pedigreeChart, dataUrl)
 // Wait for DOM to be ready
 document.addEventListener("DOMContentLoaded", function () {
     // Set up storage object
-    let storage = new WebtreesPedigreeChart.Storage("webtrees-fan-chart");
+    let storage = new WebtreesPedigreeChart.Storage("webtrees-pedigree-chart");
 
     // Register all form elements valid for storing data
     storage.register("generations");
