--- a/resources/css/pedigree-chart.css
+++ b/resources/css/pedigree-chart.css
@@ -1,3 +1,8 @@
+/* Form */
+#webtrees-pedigree-chart-form #showMoreOptions.collapsing {
+    transition: none;
+}
+
 /* SVG */
 #webtrees-pedigree-chart-container {
     position: relative;
