--- a/resources/views/chart.phtml
+++ b/resources/views/chart.phtml
@@ -66,22 +66,6 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
 
         <div class="form-group row">
             <label class="col-form-label col-sm-3 wt-page-options-label">
-                <?= I18N::translate('Layout') ?>
-            </label>
-            <div class="col-sm-9 wt-page-options-value">
-                <?=
-                    view('components/checkbox', [
-                        'id'      => 'showEmptyBoxes',
-                        'name'    => 'showEmptyBoxes',
-                        'label'   => I18N::translate('Show empty boxes for missing individuals. Caution: May slow down your system!'),
-                        'checked' => $configuration->getShowEmptyBoxes(),
-                    ])
-                ?>
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-form-label col-sm-3 wt-page-options-label">
                 <?= I18N::translate('Tree layout') ?>
             </label>
             <div class="col-sm-9 wt-page-options-value" id="treeLayout">
@@ -100,9 +84,33 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
             </div>
         </div>
 
+        <div class="collapse<?= ($configuration->getShowMore() ? ' show' : '') ?>" id="showMoreOptions">
+            <div class="form-group row">
+                <label class="col-form-label col-sm-3 wt-page-options-label">
+                    <?= I18N::translate('Layout') ?>
+                </label>
+                <div class="col-sm-9 wt-page-options-value">
+                    <?=
+                    view('components/checkbox', [
+                        'id'      => 'showEmptyBoxes',
+                        'name'    => 'showEmptyBoxes',
+                        'label'   => I18N::translate('Show empty boxes for missing individuals. Caution: May slow down your system!'),
+                        'checked' => $configuration->getShowEmptyBoxes(),
+                    ])
+                    ?>
+                </div>
+            </div>
+        </div>
+
         <div class="form-group row">
             <div class="col-sm-12 wt-page-options-value text-center">
                 <div class="btn-toolbar justify-content-between">
+                    <div class="btn-group btn-group-sm">
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#showMoreOptions" aria-expanded="false" aria-controls="showMoreOptions">
+                            <?= I18N::translate('More options ...') ?>
+                        </button>
+                    </div>
+
                     <div class="btn-group btn-group-sm">
                         <input class="btn btn-primary" type="submit" value="<?= I18N::translate('view') ?>">
                     </div>
@@ -186,6 +194,18 @@ document.addEventListener("DOMContentLoaded", function () {
     storage.register("generations");
     storage.register("showEmptyBoxes");
     storage.register("treeLayout");
+
+    // Handle special case with option toggler (works only with jquery)
+    $("#showMoreOptions")
+        .on("shown.bs.collapse", function () {
+            storage.write("showMoreOptions", true);
+        })
+        .on("hidden.bs.collapse", function () {
+            storage.write("showMoreOptions", false);
+        })
+        .collapse(
+            storage.read("showMoreOptions") ? "show" : "hide"
+        );
 
     // Set initial stored value for radio button group
     const formElements = document.getElementById("webtrees-pedigree-chart-form").elements;
