--- a/resources/views/chart.phtml
+++ b/resources/views/chart.phtml
@@ -66,7 +66,7 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
 
         <div class="form-group row">
             <label class="col-form-label col-sm-3 wt-page-options-label">
-                <?= I18N::translate('Tree layout') ?>
+                <?= I18N::translate('Orientation') ?>
             </label>
             <div class="col-sm-9 wt-page-options-value" id="treeLayout">
                 <?=
