--- a/resources/views/chart.phtml
+++ b/resources/views/chart.phtml
@@ -232,9 +232,9 @@ document.addEventListener("DOMContentLoaded", function () {
     
         // Update configuration with changed form values
         pedigreeChart.configuration.generations    = parseInt(document.getElementById('generations').value);
-        pedigreeChart.configuration.showEmptyBoxes = !!document.getElementById('showEmptyBoxes').checked;
-        pedigreeChart.configuration.treeLayout     = document.getElementById('treeLayout').value;
-    
+        pedigreeChart.configuration.showEmptyBoxes = document.getElementById('showEmptyBoxes').checked;
+        pedigreeChart.configuration.treeLayout     = document.querySelector('input[name="treeLayout"]:checked').value;
+
         drawChart(pedigreeChart, ajaxUrl);
     });
 });
